# UI-Agent

./: .gitignore  COMMANDS.md  INTENT.md  README.md  TEMPLATE.md  WORKFLOW.md  pyproject.toml  test_base_url.py  test_keyboard.py  开发规范.md
.claude/: settings.local.json
config/: main.yaml
config/operations/: pycharm.yaml
docs/: ARCHITECTURE.md
openspec/: project.md
src/: main.py
src/api/: app.py
src/automation/: __init__.py  actions.py  executor.py
src/browser/: __init__.py  automation.py  browser_launcher.py  exceptions.py
src/config/: __init__.py  config_manager.py  schema.py
src/controller/: __init__.py  ide_controller.py
src/infrastructure/: __init__.py  cache.py  logger.py  utils.py
src/intent/: recognizer.py
src/locator/: __init__.py  screenshot.py  visual_locator.py
src/models/: __init__.py  command.py  element.py  result.py
src/orchestration/: adapters.py  context.py  executor.py  orchestrator.py
src/parser/: __init__.py  command_parser.py  intents.py
src/workflow/: __init__.py  exceptions.py  executor.py  models.py  parser.py  validator.py
tests/integration/: test_task_flow_execution.py  test_visual_locator_normalization.py  test_workflow_execution.py
tests/locator/: test_monitor.py
tests/performance/: test_coordinate_normalization_perf.py
tests/unit/: test_browser_automation.py  test_browser_launcher.py  test_coordinate_normalization.py  test_intent_recognizer.py  test_orchestrator.py  (+6 more)
workflows/: WORKFLOW_OPENCV_GUIDE.md  opencv-example.md  simple-example.md  template-matching-example.md  with-conditions.md
(+28 files in other folders)
